# HomeAssistantBot

./: .env.example  Cargo.toml  readme.md
src/: main.rs
src/rosie/: mod.rs
